[gd_scene load_steps=23 format=3 uid="uid://bn4lo5veac85u"]

[ext_resource type="Script" path="res://Scene/Door/Door.gd" id="1_utrea"]
[ext_resource type="Texture2D" uid="uid://do6qngbmiwfyv" path="res://Scene/Door/Floor_Modular_Buildings_1_Door_1_16x16.png" id="2_bxvd1"]
[ext_resource type="PackedScene" uid="uid://b42ymppw1o4ql" path="res://Components/InteractWithEKeyBoard/InteractWithKeyBoardComponent.tscn" id="3_nr4oy"]
[ext_resource type="PackedScene" uid="uid://cbf4agq5635at" path="res://Components/TeleportePlayer.tscn" id="4_cpj2w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v5gua"]
atlas = ExtResource("2_bxvd1")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ropf8"]
atlas = ExtResource("2_bxvd1")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iq82c"]
atlas = ExtResource("2_bxvd1")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6x5aw"]
atlas = ExtResource("2_bxvd1")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dfs7"]
atlas = ExtResource("2_bxvd1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4uht"]
atlas = ExtResource("2_bxvd1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yq7x5"]
atlas = ExtResource("2_bxvd1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l624c"]
atlas = ExtResource("2_bxvd1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_abqjl"]
atlas = ExtResource("2_bxvd1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_824hw"]
atlas = ExtResource("2_bxvd1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_02xom"]
atlas = ExtResource("2_bxvd1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nq0dv"]
atlas = ExtResource("2_bxvd1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3s8cy"]
atlas = ExtResource("2_bxvd1")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cktu"]
atlas = ExtResource("2_bxvd1")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfrny"]
atlas = ExtResource("2_bxvd1")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfbx5"]
atlas = ExtResource("2_bxvd1")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ck0rx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5gua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ropf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iq82c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x5aw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dfs7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4uht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yq7x5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l624c")
}],
"loop": false,
"name": &"close",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_abqjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_824hw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02xom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nq0dv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3s8cy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cktu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfrny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfbx5")
}],
"loop": false,
"name": &"open",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j2ivi"]
size = Vector2(24, 20)

[node name="Door" type="Node2D"]
position = Vector2(24, 24)
script = ExtResource("1_utrea")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ck0rx")
animation = &"open"

[node name="InteractWithMouseComponent" parent="." instance=ExtResource("3_nr4oy")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractWithMouseComponent"]
position = Vector2(0, 23)
shape = SubResource("RectangleShape2D_j2ivi")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TeleportePlayer" parent="." instance=ExtResource("4_cpj2w")]

[connection signal="open_interaction" from="InteractWithMouseComponent" to="." method="_on_interact_with_mouse_component_open_interaction"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
